# Whisper

./: .gitignore  BUILD-CUDA.md  CMakeLists.txt  Readme.md
Examples/Smoke/: Program.cs  Smoke.csproj
Examples/VoiceTyper/: App.xaml.cs  AppIcon.cs  AppSettings.cs  AudioRecorder.cs  Autostart.cs  KeyboardHook.cs  ListeningOverlay.cs  Log.cs  MainWindow.xaml  MainWindow.xaml.cs  ManagedPcmBuffer.cs  MediaConverter.cs  ModelDownloader.cs  Readme.md  Recognizer.cs  TextInjector.cs  Theme.cs  VoiceTyper.csproj  WhisperServer.cs  app.manifest
Examples/VoiceTyper/Installer/: VoxType.wxs
Tools/: setup-whispercpp.ps1
Tools/CompressShaders/: CompressShaders.csproj
Tools/IconGen/: IconGen.csproj  Program.cs
Whisper/: Whisper.vcxproj  Whisper.vcxproj.filters  modelFactory.cpp  modelFactory.h
Whisper/Whisper/: Vocabulary.cpp  Vocabulary.h
Whisper/WhisperCpp/: WhisperCppBackend.cpp  WhisperCppBackend.h
